Revision history for local::lib

1.003003 2009-04-09
        - Expose the internals per RT #36846.
        - Fix the MANIFEST up a bit.

1.003002 2009-02-25
        - Add a doc patch from Torsten Raudssus <torsten@raudssus.de> that
          clarifies how to specify a directory other than ~/perl5.

1.003001 2009-01-14
        - Properly bail if given fancy dashes obtained by copy-pasting from a
          UTF8-happy POD formatter. This will bail in both the Makefile.PL and
          in local::lib::import().

1.003000 2009-01-13
        - Add the --self-contained flag from Mark Stosberg, which also contains
          a doc patch warning about the dangers of UNINST=1. Thanks, Mark!

1.002000 2008-08-06
        - make CPAN config reinit non-prompting but still robust
        - make bootstrap auto-init CPAN config and set USE_DEFAULT for deps

1.001000 2007-09-19
        - refactored shell command generation
        - implemented C shell command generation based on this (checks $SHELL}
        - improved docs
        - modified Makefile.PL to install an up-to-date CPAN.pm if needed

1.000000 2007-09-13
        - initial release