@@ -1,5 +1,8 @@
 Revision history for local::lib
 
+       - Additional documentation and examples concerning having multiple
+         local::lib enviornments (amiri)
+
 1.003003 2009-04-09
         - Expose the internals per RT #36846.
         - Fix the MANIFEST up a bit.
